--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body{
-  background:linear-gradient(to top right, black, cyan);
+  background:linear-gradient(to top right, #8E9FED, #94C0F7);
+}
+.h1_princ{
+  font-size:10%;
+  font-family:"arial black";
+  color:#8EEDD6;
+  text-shadow: 2% 2% 4% rgba(66, 68, 90, 1);
 }
