--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html{
   width:100%;
   height:100%;
+  padding:0;
 }
 body{
   background:linear-gradient(to top right, #8E9FED, #94C0F7);
@@ -8,7 +9,8 @@ body{
   flex-direction:column;
   align-items:center;
   width:100%;
-  height:100%;
+  min-height:100vh;
+  height:fit-content;
   padding:0;
 }
 .h1_princ{
