--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
   width:100%;
   height:100%;
   padding:0;
+  margin:0;
 }
 body{
   background:linear-gradient(to top right, #8E9FED, #94C0F7);
@@ -14,6 +15,7 @@ body{
   min-height:100vh;
   height:fit-content;
   padding:0;
+  margin:0;
 }
 .h1_princ{
   font-size:70px;
